--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,6 @@
         <title>{{ site.title }}</title>
         <meta name="description" content="{{ site.description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="{{ '/assets/stylesheets/main.css' | prepend:site.url }}">
-    <link href="/assets/stylesheets/syntax.css" rel="stylesheet" >
+    <link rel="stylesheet" href="{{ '/assets/stylesheets/main.css' | prepend:site.baseurl }}">
+    <link rel="stylesheet" href="{{ '/assets/stylesheets/syntax.css' | prepend:site.baseurl }}">
     </head>
